[gd_scene load_steps=4 format=3 uid="uid://dcgjcy58leuj6"]

[ext_resource type="Script" path="res://scripts/rockpaperscissors3.gd" id="1_70gic"]
[ext_resource type="Texture2D" uid="uid://bmt7s8boduf3b" path="res://assets/images/Square.png" id="2_ngpnh"]
[ext_resource type="Texture2D" uid="uid://e88jyq8q8gl5" path="res://assets/images/Thoughtcloud.png" id="3_wdfpa"]

[node name="RPS" type="Node2D"]
script = ExtResource("1_70gic")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" type="Label" parent="."]
offset_left = -341.0
offset_top = 342.0
offset_right = -283.0
offset_bottom = 365.0

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
scale = Vector2(0.7, 0.7)

[node name="Opponent" type="Label" parent="."]
offset_left = 311.0
offset_top = -360.0
offset_right = 399.0
offset_bottom = -337.0
text = "
"

[node name="OpponentSprite" type="Sprite2D" parent="Opponent"]
scale = Vector2(0.7, 0.7)
flip_h = true
flip_v = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Square" type="Sprite2D" parent="."]
modulate = Color(0.288021, 0.553859, 0.802437, 1)
self_modulate = Color(0.992157, 1, 1, 1)
z_index = -2
position = Vector2(1, 0)
scale = Vector2(33.75, 33.75)
texture = ExtResource("2_ngpnh")

[node name="Thoughtcloud" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(227, -317)
scale = Vector2(1.53208, 1.27656)
texture = ExtResource("3_wdfpa")

[node name="EndTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
